fix: fix swagger error
